opam-version: "1.2"
version: "dev"
maintainer: "Drup <drupyog@zoho.com>"
authors: "Drup <drupyog@zoho.com>"
license: "ISC"
homepage: "https://github.com/Drup/regenerate"
bug-reports: "https://github.com/Drup/regenerate/issues"
dev-repo: "git+https://github.com/Drup/regenerate.git"
depends: [
  "jbuilder" {build}
  "cmdliner"
  "fmt"
  "containers"
  "mtime"
  "oseq"
  "sequence"
  "re" {test}
]
available: ocaml-version >= "4.02"
build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs "@install"]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
