opam-version: "1.2"
version: "dev"
maintainer: "Drup <drupyog@zoho.com>"
authors: "Drup <drupyog@zoho.com>"
license: "ISC"
homepage: "https://github.com/regex-generate/regenerate"
bug-reports: "https://github.com/regex-generate/regenerate/issues"
dev-repo: "git+https://github.com/regex-generate/regenerate.git"
doc: "https://regex-generate.github.io/regenerate/doc/dev/"

depends: [
  "jbuilder" {build}
  "cmdliner"
  "fmt"
  "containers"
  "mtime"
  "oseq"
  "sequence"
  "qcheck"
  "re" {test}
]
available: ocaml-version >= "4.03"
build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs "@install"]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
